added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,85 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+
+        <h2>HTML</h2>
+
+        <ul>
+          
+          <li>The head element contains information abour the webpage.</li>
+
+          <li>The body element represents the visible content shown to the user.</li>
+
+          <li>Child elements are elements inside of other elements.</li>
+
+          <li>Text, image, header, and list elements are used to add content to a page.</li>
+
+          <li>Meta-related, content division, and semantic elements divide and describe a page.</li>
+
+          <li>Metadata helps the browser render the page correctly, it is not seen by users.</li>
+
+          <li>Headers are h1 - h6, the numbers represent the level of heading. These should be used in order and h1 should only be used once per page.</li>
+
+          <li>Semantic HTML elements: the name of the element indicates role of content as well as providing structure to the content, these should be used where ever possible.</li>
+
+          <li>When adding an image the 'src' attribute defines it's location or source; the 'alt' attribute contains a text string the describes the image. The 'alt' text is important for users using assistive technologies and to help improve search engine rankings.</li>
+
+          <li>'Section' elements define a sectio in a document that contains thematic content.</li>
+
+        </ul>
+
+      </section>
+
+      <section class="card" id="css-section">
+
+        <h2>CSS</h2>
+
+        <ul>
+
+          <li>Enter CSS notes here</li>
+
+        </ul>
+
+      </section>
+
+      <section class="card" id="git-section">
+
+        <h2>Git</h2>
+
+        <ul>
+
+          <li>cd "name of directory": navigate to that directory</li>
+
+          <li>git status:checks what branch we are currently on</li>
+
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+
+          <li>git clone [url]: retrieve an entire repository from a hosted location via URL</li>
+
+          <li>git add -A: add modifications made in the current working branch to the staging area</li>
+
+          <li>git commit -m "[descriptive message]": commit staged content</li>
+
+          <li>git pull origin "branch you want to pull from": pulls changes from base branch to local environment - ensures you have the latest version of the project on your local pc</li>
+
+          <li>git push origin "branch you want to push to" : push changes made locally to remote GitHub branch</li>
+
+        </ul>
+
+      </section>
+
+      <section class="card" id="javascript-section">
+
+        <h2>JavaScript</h2>
+
+        <ul>
+
+          <li>Enter JavaScript notes here</li>
+
+        </ul>
+
+      </section>
     </main>
 
     <footer>
