added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -48,7 +49,28 @@
 
         <ul>
 
-          <li>Enter CSS notes here</li>
+          <li>A margin indicates how much space we want around the outsde of an element.</li>
+
+          <li>A padding indicates how much space we want around the content iside an element.</li>
+
+          <li>Inline CSS styles apply to a specific HTML tag to style a particular page element only.</li>
+
+          <li>Internal style sheets are located in the head element, the rules only apply to that page.</li>
+
+          <li>External style sheets are separate files linked in the HTML head element.</li>
+
+          <li>A CSS rule is built from a selector followed by declarations. The selector defines the element or attributes the declarations will apply to.</li>
+
+          <li>Declarations contain two components: the CS property we want to apply and the value of the property.</li>
+
+          <li>* can be used to apply a rule to ALL elements visible on a page.</li>
+
+          <li>Two or more elements that share the same rule can be grouped together using commas.</li>
+
+          <li>Class attributes allow you to share a CSS rule to any element by assigning the rule to a class attribute with a class selector. The class attribute can then be assigned to any element you wish to be assigned the CSS rule.</li>
+
+          <li>Using a period before a class designates it as a class selector. Any element assigned to that class will follow the CSS rules applied to the class selector.</li>
+          
 
         </ul>
 
