--- a/index.html
+++ b/index.html
@@ -108,8 +108,21 @@
         <h2>JavaScript</h2>
 
         <ul>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>JavaScript files are executed from top to bottom.</li>
+          <li>When we create a function, we are defining a block of code that performs a specific task and giving it a unique name.</li>
+          <li>To execute a function, it must be called in the code.</li>
+          <li>An array allows you to store a collection of items under a single variable name, and can contain a mix of data types.</li>
+          <li>Arrays are zero-indexed, meaning the first element in an array is at index 0.</li>
+          <li>Strings are used to store text.</li>
+          <li>A boolean is a true or false value, most often used in conditional logic.</li>
+          <li>Variables can be declared using let, const, or var. Let allows you to reassign the variable. Const declares a variable whose values are never intended to hange, it cannot be reassigned.</li>
+          <li>Console.log() outputs the values of what we put inside the parentheses to the console.</li>
+          <li>If statements will only execute the code if the statement meets a condition. Else if an be used to introduce more than one condition.</li>
+          <li>A for loop uses the predictable pattern of indices to perform a task on all the items in an array by allowing a single block of code to executed repeatedly.</li>
+          <li>A for loop contains three statements: The first determinse the starting point of the loop (i.e. let x = 0). The second is the condition (i.e. as long as the variable is less than the length of the array x < array.length). The thirdand final allows the array to iterate over each item (i.e. x++) everytime the code lopps x will increase by 1.</li>
 
-          <li>Enter JavaScript notes here</li>
 
         </ul>
 
